--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -63,7 +63,7 @@ li:hover a {
     padding-bottom: 148px;
     position: relative;
     color: #FFFFFF;
-    font-weight: 700;
+    font-weight: 600;
     font-size: 35px;
     @include tablet {
       font-size: 60px;
@@ -92,6 +92,7 @@ padding-right: 20px;
       width: 1000px;
       height: 600px;
       padding-left: 90px;
+      margin-left: 100px;
     }
 }
 
@@ -112,7 +113,7 @@ padding-right: 20px;
 }
 &__title--mod {
   font-weight: 600;
-  font-size: 23px;
+  font-size: 30px;
   @include tablet {
     font-size: 30px;
   }
@@ -123,14 +124,14 @@ padding-bottom: 10px;
 line-height: 1.5;
 font-weight: 600;
 @include desktop{
-  padding-left: 120px;
+  padding-left: 180px;
 }
 }
 &-text-container__info--a {
   padding-bottom: 20px;
   font-weight: 600;
   @include desktop {
-    padding-left: 120px;
+    padding-left: 180px;
   }
 }
 &-text-container__info--aa {
@@ -204,7 +205,7 @@ flex-direction: column;
     font-size: 30px;
   }
   @include desktop {
-    padding-left: 70px;
+    padding-left: 150px;
   }
  }
  &-image__item{
@@ -227,7 +228,7 @@ flex-direction: column;
     padding-right: 25px;
   }
   @include desktop {
-    padding-left: 70px;
+    padding-left: 150px;
   }
 }
 &-image__item--mod2 {
@@ -313,7 +314,7 @@ flex-direction: column;
       padding-left: 275px;
     }
     @include desktop {
-      padding-left: 650px;
+      padding-left: 770px;
     }
     
   }
