--- a/styles/bio.css
+++ b/styles/bio.css
@@ -286,6 +286,17 @@ li:hover a {
   }
 }
 
+.comment__section--container {
+  display: flex;
+}
+
+.comment__section--image {
+  width: 60px;
+  height: 60px;
+  margin-right: 20px;
+  border-radius: 50%;
+}
+
 .contact-info {
   background-color: #323232;
   color: #FFFFFF;
