--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -237,7 +237,15 @@ flex-direction: column;
   }
 }
 }
-
+.comment__section--container {
+  display: flex;
+}
+.comment__section--image {
+  width: 60px;
+  height: 60px;
+  margin-right: 20px;
+  border-radius: 50%;
+}
 .contact-info {
     background-color: #323232;
     color: #FFFFFF;
