--- a/styles/bio.css
+++ b/styles/bio.css
@@ -290,11 +290,36 @@ li:hover a {
   display: flex;
 }
 
+.comment__section--input1 {
+  padding-bottom: 20px;
+}
+
+.comment__section--text {
+  padding-bottom: 5px;
+}
+
 .comment__section--image {
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   margin-right: 20px;
   border-radius: 50%;
+}
+
+button {
+  text-align: center;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding-right: 135px;
+}
+
+#name {
+  padding-bottom: 20px;
+  padding-right: 70px;
+}
+
+#comment {
+  padding-bottom: 75px;
+  padding-right: 70px;
 }
 
 .contact-info {
