--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -244,6 +244,10 @@ flex-direction: column;
   padding-bottom: 20px;
 }
 .comment__section--text {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.comment__section--text1 {
   padding-bottom: 5px;
 }
 .comment__section--image {
