--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,14 +1,14 @@
 @font-face {
-  font-family: "Avenir";
+  font-family: "Avenir", Arial, Helvetica, sans-serif;
   src: url(/assets/fonts/AvenirNextLTPro-Regular.otf);
 }
 @font-face {
-  font-family: "Avenir";
+  font-family: "Avenir", Arial, Helvetica, sans-serif;
   src: url(/assets/fonts/AvenirNextLTPro-Bold.otf);
   font-weight: 700;
 }
 @font-face {
-  font-family: "Avenir";
+  font-family: "Avenir", Arial, Helvetica, sans-serif;
   src: url(/assets/fonts/AvenirNextLTPro-Demi.otf);
   font-weight: 600;
 }
@@ -85,6 +85,7 @@ li:hover a {
   padding-bottom: 148px;
   position: relative;
   color: #FFFFFF;
+  color: rgba(255, 255, 255, 0.5);
   font-weight: 600;
   font-size: 35px;
 }
@@ -102,6 +103,8 @@ li:hover a {
   flex-wrap: wrap;
 }
 .main-images__container {
+  display: flex;
+  flex-wrap: wrap;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -132,6 +135,7 @@ li:hover a {
   padding: 1px;
   padding-top: 15px;
   padding-bottom: 10px;
+  color: #323232;
 }
 @media (min-width: 768px) {
   .main__title {
@@ -239,6 +243,7 @@ li:hover a {
   padding-left: 0%;
   font-weight: 600;
   font-size: 25px;
+  color: #323232;
 }
 @media (min-width: 768px) {
   .gallery-images {
