--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -63,6 +63,7 @@ li:hover a {
     padding-bottom: 148px;
     position: relative;
     color: #FFFFFF;
+    color: rgba(255, 255, 255, 0.5);
     font-weight: 600;
     font-size: 35px;
     @include tablet {
@@ -78,6 +79,8 @@ li:hover a {
     flex-wrap: wrap;
 }
 &-images__container {
+display: flex;
+flex-wrap: wrap; 
 padding-left: 20px;
 padding-right: 20px;
 }
@@ -106,6 +109,7 @@ padding-right: 20px;
     padding: 1px;
     padding-top: 15px;
     padding-bottom: 10px;
+    color: #323232;
     @include tablet {
       padding-top: 15px;
       padding-bottom: 30px;
@@ -200,6 +204,7 @@ flex-direction: column;
   padding-left: 0%;
   font-weight: 600;
   font-size: 25px;
+  color: #323232;
   @include tablet {
     padding-left: 25px;
     font-size: 30px;
