--- a/styles/bio.css
+++ b/styles/bio.css
@@ -85,7 +85,6 @@ li:hover a {
   padding-bottom: 148px;
   position: relative;
   color: #FFFFFF;
-  color: rgba(255, 255, 255, 0.5);
   font-weight: 600;
   font-size: 35px;
 }
@@ -312,6 +311,7 @@ li:hover a {
 .comment__section--text {
   padding-top: 15px;
   padding-bottom: 15px;
+  margin-left: 25px;
 }
 @media (min-width: 768px) {
   .comment__section--text {
@@ -321,13 +321,14 @@ li:hover a {
 
 .comment__section--text1 {
   padding-bottom: 5px;
-  color: #E1E1E1;
+  color: #AFAFAF;
 }
 
 .comment__section--image {
   width: 50px;
   height: 50px;
   margin-right: 20px;
+  margin-left: 25px;
   border-radius: 50%;
 }
 
@@ -335,7 +336,11 @@ button {
   height: 45px;
   margin-top: 15px;
   margin-bottom: 15px;
-  padding-right: 125px;
+  padding-right: 105px;
+  background-color: #323232;
+  color: #FFFFFF;
+  border-radius: 4px;
+  font-weight: 700;
 }
 @media (min-width: 768px) {
   button {
@@ -345,9 +350,15 @@ button {
   }
 }
 
+button:hover {
+  background-color: #000000;
+}
+
 #name {
-  width: 195px;
+  width: 175px;
   height: 35px;
+  border-radius: 4px;
+  border-color: #AFAFAF;
 }
 @media (min-width: 768px) {
   #name {
@@ -356,14 +367,35 @@ button {
   }
 }
 
+#name:hover {
+  border-color: #000000;
+}
+
 #comment {
-  width: 195px;
+  width: 175px;
   height: 75px;
+  border-radius: 4px;
+  border-color: #AFAFAF;
 }
 @media (min-width: 768px) {
   #comment {
     width: 550px;
     height: 85px;
+  }
+}
+
+#comment:hover {
+  border-color: #000000;
+}
+
+#comments {
+  display: flex;
+  flex-wrap: wrap;
+  padding-right: 20px;
+}
+@media (min-width: 1280px) {
+  #comments {
+    width: 575px;
   }
 }
 
@@ -447,14 +479,23 @@ button {
     margin-left: 50px;
   }
 }
+.contact-info__logo {
+  display: none;
+}
 @media (min-width: 768px) {
   .contact-info__logo {
-    padding-left: 275px;
+    display: flex;
+    padding-left: 250px;
   }
 }
 @media (min-width: 1280px) {
   .contact-info__logo {
-    padding-left: 770px;
+    padding-left: 675px;
+  }
+}
+@media (min-width: 768px) {
+  .contact-info__logo2 {
+    display: none;
   }
 }
 
