--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -63,7 +63,7 @@ li:hover a {
     padding-bottom: 148px;
     position: relative;
     color: #FFFFFF;
-    color: rgba(255, 255, 255, 0.5);
+    
     font-weight: 600;
     font-size: 35px;
     @include tablet {
@@ -257,46 +257,73 @@ flex-direction: column;
 .comment__section--text {
   padding-top: 15px;
   padding-bottom: 15px;
+  margin-left: 25px;
   @include tablet {
     padding-left: 20px;
   }
 }
 .comment__section--text1 {
   padding-bottom: 5px;
-  color: #E1E1E1;
+  color: #AFAFAF;
 }
 .comment__section--image {
   width: 50px;
   height: 50px;
   margin-right: 20px;
+  margin-left: 25px;
   border-radius: 50%;
 }
 button {
   height: 45px;
   margin-top: 15px;
   margin-bottom: 15px;
-  padding-right: 125px;
+  padding-right: 105px;
+  background-color: #323232;
+  color: #FFFFFF;
+  border-radius: 4px;
+  font-weight: 700;
   @include tablet {
     height: 40px;
     margin-left: 410px;
     padding-right: 70px;
   }
 }
+button:hover {
+  background-color: #000000;
+}
+
 #name {
-  width: 195px;
+  width: 175px;
   height: 35px;
-  
+  border-radius: 4px;
+  border-color: #AFAFAF;
   @include tablet {
     width: 550px;
     height: 45px;
   }
 }
+#name:hover {
+  border-color: #000000;
+}
 #comment {
-  width: 195px;
+  width: 175px;
   height: 75px;
+  border-radius: 4px;
+  border-color: #AFAFAF;
   @include tablet {
     width: 550px;
     height: 85px;
+  }
+}
+#comment:hover {
+  border-color: #000000;
+}
+#comments {
+  display: flex;
+  flex-wrap: wrap;
+  padding-right: 20px;
+  @include desktop {
+    width: 575px;
   }
 }
 .contact-info {
@@ -371,13 +398,19 @@ button {
     }
   }
   &__logo {
+    display: none;
     @include tablet {
-      padding-left: 275px;
+      display: flex;
+      padding-left: 250px;
     }
     @include desktop {
-      padding-left: 770px;
+      padding-left: 675px;
     }
-    
+  }
+   &__logo2 {
+    @include tablet {
+      display: none;
+    }
   }
 }
 
